--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -56,7 +56,7 @@
     name: all
     login_user: "{{ LOGIN_USER }}"
     login_password: "{{ LOGIN_PASSWORD }}"
-    login_host: "{{ LOGIN_HOST }}"
+    login_host: "{{ MYSQL_HOST }}"
     target: /app/schema/backend.sql
 
 - name: daemon reload and restart service
