--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -28,7 +28,7 @@
 
 # - name: download the url
 #   ansible.builtin.get_url:
-#     url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+#     url: https\://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
 #     dest: /tmp/backend.zip
 
 # - name: unzip file
