--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,16 @@
 [defaults]
 
 inventory = inventory.ini
+
+[mysql]
+mysql.pavanreddy.store
+
+[backend]
+backend.pavanreddy.store
+
+[frontend]
+frontend.pavanreddy.store
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
