--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -21,7 +21,7 @@
   community.mysql.mysql_info:
     login_user: root
     login_password: "{{ mysql_root_password }}"
-    login_host: mysql.pavanreddy.store
+    login_host: "{{ mysql_host }}"
   register: mysql_info
   ignore_errors: true
 
